	  Net Income (aka Net Profit) in the Balance Sheet.  This is
	  a commented-out partial fix for #113196.

	* src/business/business-gnome/business-gnome.scm:
	* src/scm/main-window.scm:
	  Move the instantiation of File -> Properties into
	  main-window.scm (out of business-gnome.scm) for future cases
	  where we might decide to ship the business modules separately.
	
2003-05-22  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-reports/owner-report.scm:  Better fix for 108731
	  limit the itemized invoices/payments to the start/end date range,
	  but print out a "Balance" line if there is a non-zero balance as
	  of the start date.

	Nikos Charonitakis's account chart updates:
	* accounts/el_GR/Makefile.am: added new carloan account chart
	* accounts/el_GR/acctchrt_common.gnucash-xea: updated account chart
	* accounts/el_GR/acctchrt_carloan.gnucash-xea: new car loan chart

	* src/report/standard-reports/average-balance.scm:
	  Use the correct columns when printing the Gain column, don't
	  reuse the same column as profit; we want to report different
	  values.  Fixes #113096.
	
2003-05-21  Derek Atkins  <derek@ihtfp.com>

	* src/report/standard-reports/advanced-portfolio.scm:
	  Deal properly when there are no prices for a commodity.

	* src/business/business-reports/owner-report.scm:
	  Supply a start date (as well as an end date) and don't print
	  invoices that occur prior to the start date or after the end date.
	  The aging information ignores the start date, but not the end date.
	  This means the aging information will always be acurate through the
	  end date (even if all the invoices and payments are not displayed).
	  Fixes #108731.
	
2003-05-20  Derek Atkins  <derek@ihtfp.com>

	* src/scm/printing/print-check.scm: some finer adjustments on
	  the locations for Deluxe personal checks.

	* acinclude.m4: modify the AC_GWRAP_CHECK_GUILE() macro to
	  take an argument, the g-wrap module directory.  Then actually