@@ -1,6 +1,27 @@
+#include <libofx/libofx.h>
 int
 main(int argc, char ** argv) 
 {
   return 0;
 }
 
+int ofx_proc_status_cb(struct OfxStatusData data)
+{
+	return 0;
+}
+int ofx_proc_security_cb(struct OfxSecurityData data)
+{
+	return 0;
+}
+int ofx_proc_transaction_cb(struct OfxTransactionData data)
+{
+	return 0;
+}
+int ofx_proc_statement_cb(struct OfxStatementData data)
+{
+	return 0;
+}
+int ofx_proc_account_cb(struct OfxAccountData data)
+{
+	return 0;
+}
